fixtures/typescript/fallback/should_fail/nullishAssign.ts
let config: string | undefined;
config ??= "default";
